--- a/_posts/2019-06-27-ul-roll2go.md
+++ b/_posts/2019-06-27-ul-roll2go.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title: >Roll2Go: Surfing the Micro-Mobility Wave
+title: >
+    Roll2Go: Surfing the Micro-Mobility Wave
 date: 2019-06-27 16:00:00
 description: A prototyping session I led back at Unicorn Labs for a last mile navigation service.
 redirect: https://www.unicorn-labs.ch/blog/roll2go-surfing-the-micro-mobility-wave
