--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -8,7 +8,7 @@
   year = {2022},
   abstract={This work conducts the first analysis on the robustness against adversarial attacks on self-supervised Vision Transformers trained using DINO. First, we evaluate whether features learned through selfsupervision are more robust to adversarial attacks than those emerging from supervised learning. Then, we present properties arising for attacks in the latent space. Finally, we evaluate whether three well-known defense strategies can increase adversarial robustness in downstream tasks by only fine-tuning the classification head to provide robustness even in view of limited compute resources. These defense strategies are: Adversarial Training, Ensemble Adversarial Training and Ensemble of Specialized Networks.},
   code={https://github.com/thobauma/AADefDINO},
-  poster={aadefdino-poster},
+  poster={aadefdino-poster.pdf},
   arxiv={2206.06761},
   copyright = {Creative Commons Attribution 4.0 International}
 }
