--- a/_posts/2022-08-17-git-pain.md
+++ b/_posts/2022-08-17-git-pain.md
@@ -1,9 +1,10 @@
 ---
 layout: distill
-title: A page for all your git struggles
-description: a collection of links and guides for getting you out of all sorts of git trouble.
-date: 2022-08-17
-published: false
+title: frequently forgotten git commands
+description: A collection of links and guides for getting out of all sorts of git trouble.
+date: 2023-01-09
+categories: development
+published: true
 
 authors:
   - name: Nasib Naimi
@@ -19,12 +20,13 @@ authors:
 #   - we may want to automate TOC generation in the future using
 #     jekyll-toc plugin (https://github.com/toshimaru/jekyll-toc).
 toc:
-  - name: EqRebase or Merge?
+  - name: Rebase or Merge?
     # if a section has subsections, you can add them as follows:
     # subsections:
     #   - name: Example Child Subsection 1
     #   - name: Example Child Subsection 2
   - name: .gitignore
+  - name: Removing last commit and rewriting history (careful!)
 
 # Below is an example of injecting additional post-specific styles.
 # If you use this post as a template, delete this _styles block.
@@ -46,12 +48,21 @@ _styles: >
 
 ---
 
-**NOTE:**
-Citations, footnotes, and code blocks do not display correctly in the dark mode since distill does not support the dark mode by default.
-If you are interested in correctly adding dark mode support for distill, please open [a discussion](https://github.com/alshedivat/al-folio/discussions) and let us know.
 
 ## Rebase or Merge?
 
 ## .gitignore
 
 [setup a gitignore file](https://www.atlassian.com/git/tutorials/saving-changes/gitignore)
+
+## Removing last commit and rewriting history (careful!)
+
+Use the reset command. First undo the local commit 
+
+{% highlight bash %} git reset HEAD^ {% endhighlight %}
+
+Then, force push the reverted local commit to the remote git repository with
+
+{% highlight bash %} git push origin +HEAD {% endhighlight %}
+
+**Note:** This will overwrite the commits that you reverted and they will no longer exist.
