--- a/_posts/2022-08-17-git-pain.md
+++ b/_posts/2022-08-17-git-pain.md
@@ -3,7 +3,7 @@ layout: distill
 title: frequently forgotten git commands
 description: A collection of links and guides for getting out of all sorts of git trouble.
 date: 2023-01-09
-categories: development
+categories: code
 published: true
 
 authors:
