git: revert unstaged changes

--- a/_posts/2022-08-17-git-pain.md
+++ b/_posts/2022-08-17-git-pain.md
@@ -66,3 +66,22 @@ Then, force push the reverted local commit to the remote git repository with
 {% highlight bash %} git push origin +HEAD {% endhighlight %}
 
 **Note:** This will overwrite the commits that you reverted and they will no longer exist.
+
+## revert unstaged changes
+<a href="https://stackoverflow.com/questions/52704/how-do-i-discard-unstaged-changes-in-git">source</a>
+
+For all unstaged files in current working directory use:
+
+{% highlight bash %}
+git restore .
+{% endhighlight %}
+
+For a specific file use:
+
+{% highlight bash %}
+git restore path/to/file/to/revert
+{% endhighlight %}
+
+That together with git switch replaces the overloaded git checkout, and thus removes the argument disambiguation.
+
+If a file has both staged and unstaged changes, only the unstaged changes shown in git diff are reverted. Changes shown in git diff --staged stay intact.
