--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,14 +1,29 @@
 @misc{https://doi.org/10.48550/arxiv.2206.06761,
-  title={Exploring Adversarial Attacks and Defenses in Vision Transformers trained with DINO},
-  author = {Rando, Javier and Naimi, Nasib and Baumann, Thomas and Mathys, Max},
-  doi = {10.48550/ARXIV.2206.06761},
-  url = {https://arxiv.org/abs/2206.06761},
-  keywords = {Computer Vision and Pattern Recognition (cs.CV), Artificial Intelligence (cs.AI), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title     = {Exploring Adversarial Attacks and Defenses in Vision Transformers trained with DINO},
+  author    = {Rando, Javier and Naimi, Nasib and Baumann, Thomas and Mathys, Max},
+  doi       = {10.48550/ARXIV.2206.06761},
+  url       = {https://arxiv.org/abs/2206.06761},
+  keywords  = {Computer Vision and Pattern Recognition (cs.CV), Artificial Intelligence (cs.AI), FOS: Computer and information sciences, FOS: Computer and information sciences},
   publisher = {arXiv},
-  year = {2022},
-  abstract={This work conducts the first analysis on the robustness against adversarial attacks on self-supervised Vision Transformers trained using DINO. First, we evaluate whether features learned through selfsupervision are more robust to adversarial attacks than those emerging from supervised learning. Then, we present properties arising for attacks in the latent space. Finally, we evaluate whether three well-known defense strategies can increase adversarial robustness in downstream tasks by only fine-tuning the classification head to provide robustness even in view of limited compute resources. These defense strategies are: Adversarial Training, Ensemble Adversarial Training and Ensemble of Specialized Networks.},
-  code={https://github.com/thobauma/AADefDINO},
-  poster={aadefdino-poster.pdf},
-  arxiv={2206.06761},
+  year      = {2022},
+  abstract  = {This work conducts the first analysis on the robustness against adversarial attacks on self-supervised Vision Transformers trained using DINO. First, we evaluate whether features learned through selfsupervision are more robust to adversarial attacks than those emerging from supervised learning. Then, we present properties arising for attacks in the latent space. Finally, we evaluate whether three well-known defense strategies can increase adversarial robustness in downstream tasks by only fine-tuning the classification head to provide robustness even in view of limited compute resources. These defense strategies are: Adversarial Training, Ensemble Adversarial Training and Ensemble of Specialized Networks.},
+  code      = {https://github.com/thobauma/AADefDINO},
+  poster    = {aadefdino-poster.pdf},
+  arxiv     = {2206.06761},
   copyright = {Creative Commons Attribution 4.0 International}
 }
+
+@inproceedings{10018733,
+  author    = {Barisic, Antonella and Ball, Marlan and Jackson, Noah and McCarthy, Riley and Naimi, Nasib and Strässle, Luca and Becker, Jonathan and Brunner, Maurice and Fricke, Julius and Markovic, Lovro and Seslar, Isaac and Novick, David and Salton, Jonathan and Siegwart, Roland and Bogdan, Stjepan and Fierro, Rafael},
+  booktitle = {2022 IEEE International Symposium on Safety, Security, and Rescue Robotics (SSRR)},
+  title     = {Multi-Robot System for Autonomous Cooperative Counter-UAS Missions: Design, Integration, and Field Testing},
+  publisher = {IEEE},
+  url       = {https://ieeexplore.ieee.org/abstract/document/10018733},
+  year      = {2022},
+  abstract  = {With the rapid development of technology and the proliferation of uncrewed aerial systems (UAS), there is an immediate need for security solutions. Toward this end, we propose the use of a multi-robot system for autonomous and cooperative counter-UAS missions. In this paper, we present the design of the hardware and software components of different complementary robotic platforms: a mobile uncrewed ground vehicle (UGV) equipped with a LiDAR sensor, an uncrewed aerial vehicle (UAV) with a gimbal-mounted stereo camera for air-to-air inspections, and a UAV with a capture mechanism equipped with radars and camera. Our proposed system features 1) scalability to larger areas due to the distributed approach and online processing, 2) long-term cooperative missions, and 3) complementary multimodal perception for the detection of multirotor UAVs. In field experiments, we demonstrate the integration of all subsystems in accomplishing a counter-UAS task within an unstructured environment. The obtained results confirm the promising direction of using multi-robot and multi-modal systems for C-UAS.},
+  volume    = {},
+  number    = {},
+  pages     = {203-210},
+  doi       = {10.1109/SSRR56537.2022.10018733}
+}
+
