--- a/_posts/2022-08-17-git-pain.md
+++ b/_posts/2022-08-17-git-pain.md
@@ -85,3 +85,16 @@ git restore path/to/file/to/revert
 That together with git switch replaces the overloaded git checkout, and thus removes the argument disambiguation.
 
 If a file has both staged and unstaged changes, only the unstaged changes shown in git diff are reverted. Changes shown in git diff --staged stay intact.
+
+
+# git diff a file between commits
+From the git-diff manpage:
+
+git diff [--options] <commit> <commit> [--] [<path>...]
+For instance, to see the difference for a file "main.c" between now and two commits back, here are three equivalent commands:
+
+$ git diff HEAD^^ HEAD main.c
+$ git diff HEAD^^..HEAD -- main.c
+$ git diff HEAD~2 HEAD -- main.c
+
+[source](https://stackoverflow.com/questions/3338126/how-do-i-diff-the-same-file-between-two-different-commits-on-the-same-branch)
