update git note

--- a/_posts/2022-08-17-git-pain.md
+++ b/_posts/2022-08-17-git-pain.md
@@ -86,6 +86,12 @@ That together with git switch replaces the overloaded git checkout, and thus rem
 
 If a file has both staged and unstaged changes, only the unstaged changes shown in git diff are reverted. Changes shown in git diff --staged stay intact.
 
+# revert single file back to specific commit or HEAD
+reset both the working copy and the state in the Git index to that of HEAD:
+
+$ git checkout HEAD -- my-file.txt
+
+[source](https://stackoverflow.com/questions/7147270/hard-reset-of-a-single-file)
 
 # git diff a file between commits
 From the git-diff manpage:
