update git pain post

--- a/_posts/2022-08-17-git-pain.md
+++ b/_posts/2022-08-17-git-pain.md
@@ -20,13 +20,12 @@ authors:
 #   - we may want to automate TOC generation in the future using
 #     jekyll-toc plugin (https://github.com/toshimaru/jekyll-toc).
 toc:
-  - name: Rebase or Merge?
-    # if a section has subsections, you can add them as follows:
-    # subsections:
-    #   - name: Example Child Subsection 1
-    #   - name: Example Child Subsection 2
+  - name: rebase or merge?
   - name: .gitignore
-  - name: Removing last commit and rewriting history (careful!)
+  - name: removing last commit and rewriting history (careful!)
+  - name: revert unstaged changes
+  - name: revert single file back to specific commit or HEAD
+  - name: git diff a file between commits
 
 # Below is an example of injecting additional post-specific styles.
 # If you use this post as a template, delete this _styles block.
@@ -49,13 +48,15 @@ _styles: >
 ---
 
 
-## Rebase or Merge?
+## rebase or merge?
+
+_in progress_
 
 ## .gitignore
 
 [setup a gitignore file](https://www.atlassian.com/git/tutorials/saving-changes/gitignore)
 
-## Removing last commit and rewriting history (careful!)
+## removing last commit and rewriting history (careful!)
 
 Use the reset command. First undo the local commit 
 
@@ -86,21 +87,25 @@ That together with git switch replaces the overloaded git checkout, and thus rem
 
 If a file has both staged and unstaged changes, only the unstaged changes shown in git diff are reverted. Changes shown in git diff --staged stay intact.
 
-# revert single file back to specific commit or HEAD
+## revert single file back to specific commit or HEAD
 reset both the working copy and the state in the Git index to that of HEAD:
 
-$ git checkout HEAD -- my-file.txt
+{% highlight bash %}
+git checkout HEAD -- my-file.txt
+{% endhighlight %}
 
 [source](https://stackoverflow.com/questions/7147270/hard-reset-of-a-single-file)
 
-# git diff a file between commits
+## git diff a file between commits
 From the git-diff manpage:
 
 git diff [--options] <commit> <commit> [--] [<path>...]
 For instance, to see the difference for a file "main.c" between now and two commits back, here are three equivalent commands:
 
-$ git diff HEAD^^ HEAD main.c
-$ git diff HEAD^^..HEAD -- main.c
-$ git diff HEAD~2 HEAD -- main.c
+{% highlight bash %}
+git diff HEAD^^ HEAD main.c
+git diff HEAD^^..HEAD -- main.c
+git diff HEAD~2 HEAD -- main.c
+{% endhighlight %}
 
 [source](https://stackoverflow.com/questions/3338126/how-do-i-diff-the-same-file-between-two-different-commits-on-the-same-branch)
