update git pain

--- a/_posts/2022-08-17-git-pain.md
+++ b/_posts/2022-08-17-git-pain.md
@@ -26,6 +26,8 @@ toc:
   - name: revert unstaged changes
   - name: revert single file back to specific commit or HEAD
   - name: git diff a file between commits
+  - name: an unsung hero; git submodules
+  - name: pre- and post-commit hooks
 
 # Below is an example of injecting additional post-specific styles.
 # If you use this post as a template, delete this _styles block.
@@ -109,3 +111,46 @@ git diff HEAD~2 HEAD -- main.c
 {% endhighlight %}
 
 [source](https://stackoverflow.com/questions/3338126/how-do-i-diff-the-same-file-between-two-different-commits-on-the-same-branch)
+
+## an unsung hero; git submodules
+
+[source](https://git-scm.com/book/en/v2/Git-Tools-Submodules)
+
+## pre- and post-commit hooks
+
+With Git, you can trigger custom scripts through certain actions. These actions are grouped into two different sets of hooks: client- and server-side. Client-side hooks are triggered by commiting, merging, etc. while server-side hooks run on network operations (e.g. receiving pushed commits).
+
+hooks are stored under *.git/hooks*, which is automatically populated with some hooks when initializing git repo with *git init*. Hooks can be written with any language (ruby, python, etc.) so long as they are in properly named and executable scripts. 
+
+Enable a hook script by putting it in a file in the hooks subdirectory, naming it appropriately (no extensions!), and making it executable. After that, it will be called when ever the corresponding triggering action is performed. For a list of all major hook filenames, check the source below.
+
+**pre-commit** hooks are often part of a proper workflow to ensure that nothing is overlooked when commiting. Pre-commit hooks can check whether e.g. the code is properly formatted, the linter succeeds, and/or all test cases pass. Note that the pre-commit hook can be bypassed using *git commit --no-verify*. A nice framework for managing/maintaining pre-commit hooks is provided by pre-commit(check links). After installing the framework, create a file named *.pre-commit-config.yaml* and configure the hook as you please. An example config file for python projects:
+
+{% highlight yaml %}
+fail_fast: true
+repos:
+  - repo: https://github.com/psf/black
+    rev: 22.10.0
+    hooks:
+      - id: black
+  - repo: https://github.com/PyCQA/flake8
+    rev: 5.0.4
+    hooks:
+      - id: flake8
+        args: ["--max-line-length=89", "--ignore=E731,W503,E203"]
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: "v0.982"
+    hooks:
+      - id: mypy
+{% endhighlight %}
+
+and install the hook using 
+
+{% highlight bash %}
+pre-commit install
+{% endhighlight %}
+
+hooks are great.
+
+[pre-commit](https://pre-commit.com/)
+[source](https://git-scm.com/book/en/v2/Customizing-Git-Git-Hooks)
