update git post

--- a/_posts/2022-08-17-git-pain.md
+++ b/_posts/2022-08-17-git-pain.md
@@ -1,8 +1,8 @@
 ---
 layout: distill
-title: frequently forgotten git commands
-description: A collection of links and guides for getting out of all sorts of git trouble.
-date: 2023-01-09
+title: Git Pain Points and Solutions
+description: Solutions to tricky git situations and advanced git operations that are easy to forget
+date: 2024-03-20
 categories: code
 published: true
 
@@ -20,14 +20,11 @@ authors:
 #   - we may want to automate TOC generation in the future using
 #     jekyll-toc plugin (https://github.com/toshimaru/jekyll-toc).
 toc:
-  - name: rebase or merge?
-  - name: .gitignore
-  - name: removing last commit and rewriting history (careful!)
-  - name: revert unstaged changes
-  - name: revert single file back to specific commit or HEAD
-  - name: git diff a file between commits
-  - name: an unsung hero; git submodules
-  - name: pre- and post-commit hooks
+  - name: History Manipulation
+  - name: Recovery Operations
+  - name: Advanced Workflows
+  - name: Git Hooks and Automation
+  - name: Submodules and Subtrees
 
 # Below is an example of injecting additional post-specific styles.
 # If you use this post as a template, delete this _styles block.
@@ -49,108 +46,218 @@ _styles: >
 
 ---
 
+## History Manipulation
 
-## rebase or merge?
+### Interactive Rebase Operations
+```bash
+# Rewrite multiple commits
+git rebase -i HEAD~5  # Last 5 commits
 
-_in progress_
+# Common operations:
+# fixup - combine with previous commit, discard message
+# squash - combine with previous, keep both messages
+# reword - change commit message
+# drop - remove commit entirely
+# edit - stop for amending
 
-## .gitignore
+# Force push with lease (safer than force push)
+git push --force-with-lease  # Fails if remote has new commits
+```
 
-[setup a gitignore file](https://www.atlassian.com/git/tutorials/saving-changes/gitignore)
+### Cherry-picking and Patching
+```bash
+# Cherry-pick specific commits
+git cherry-pick <commit-hash>  # Single commit
+git cherry-pick <hash1>..<hash2>  # Range of commits
 
-## removing last commit and rewriting history (careful!)
+# Create patch files
+git format-patch -1 HEAD  # Last commit
+git format-patch -n <commit>  # Last n commits
+git format-patch master..feature  # Branch differences
 
-Use the reset command. First undo the local commit 
+# Apply patches
+git apply --check my.patch  # Test if patch applies
+git am < my.patch  # Apply patch with commit info
+```
 
-{% highlight bash %} git reset HEAD^ {% endhighlight %}
+## Recovery Operations
 
-Then, force push the reverted local commit to the remote git repository with
+### Recovering Lost Work
+```bash
+# Find lost commits (after reset --hard)
+git reflog
+git checkout -b recovery-branch <hash>
 
-{% highlight bash %} git push origin +HEAD {% endhighlight %}
+# Recover deleted branch
+git reflog | grep -A 1 'to <branch-name>'
+git checkout -b <branch-name> <hash>
 
-**Note:** This will overwrite the commits that you reverted and they will no longer exist.
+# Recover stashed changes
+git fsck --unreachable | grep commit | cut -d' ' -f3 | xargs git show
+```
 
-## revert unstaged changes
-<a href="https://stackoverflow.com/questions/52704/how-do-i-discard-unstaged-changes-in-git">source</a>
+### Advanced Reset Operations
+```bash
+# Reset specific paths
+git reset --hard origin/master -- path/to/file
 
-For all unstaged files in current working directory use:
+# Clean working directory but keep specific files
+git stash --keep-index
+git stash drop
 
-{% highlight bash %}
-git restore .
-{% endhighlight %}
+# Unstage parts of a file
+git reset -p HEAD <file>
+```
 
-For a specific file use:
+## Advanced Workflows
 
-{% highlight bash %}
-git restore path/to/file/to/revert
-{% endhighlight %}
+### Bisect for Bug Hunting
+```bash
+git bisect start
+git bisect bad  # Current commit is broken
+git bisect good <commit>  # Last known good commit
 
-That together with git switch replaces the overloaded git checkout, and thus removes the argument disambiguation.
+# Automate with test script
+git bisect run ./test-script.sh
 
-If a file has both staged and unstaged changes, only the unstaged changes shown in git diff are reverted. Changes shown in git diff --staged stay intact.
+# After finding the culprit
+git bisect reset
+```
 
-## revert single file back to specific commit or HEAD
-reset both the working copy and the state in the Git index to that of HEAD:
+### Worktrees for Multiple Checkouts
+```bash
+# Create new worktree
+git worktree add ../path/to/folder branch-name
 
-{% highlight bash %}
-git checkout HEAD -- my-file.txt
-{% endhighlight %}
+# List worktrees
+git worktree list
 
-[source](https://stackoverflow.com/questions/7147270/hard-reset-of-a-single-file)
+# Remove worktree
+git worktree remove ../path/to/folder
+```
 
-## git diff a file between commits
-From the git-diff manpage:
+### Advanced Merge Strategies
+```bash
+# Recursive strategy with options
+git merge -X ignore-space-change feature
+git merge -X theirs feature  # Prefer their changes
+git merge -X patience feature  # Better handling of renamed files
 
-git diff [--options] <commit> <commit> [--] [<path>...]
-For instance, to see the difference for a file "main.c" between now and two commits back, here are three equivalent commands:
+# Octopus merge (multiple branches)
+git merge branch1 branch2 branch3
+```
 
-{% highlight bash %}
-git diff HEAD^^ HEAD main.c
-git diff HEAD^^..HEAD -- main.c
-git diff HEAD~2 HEAD -- main.c
-{% endhighlight %}
+## Git Hooks and Automation
 
-[source](https://stackoverflow.com/questions/3338126/how-do-i-diff-the-same-file-between-two-different-commits-on-the-same-branch)
-
-## an unsung hero; git submodules
-
-[source](https://git-scm.com/book/en/v2/Git-Tools-Submodules)
-
-## pre- and post-commit hooks
-
-With Git, you can trigger custom scripts through certain actions. These actions are grouped into two different sets of hooks: client- and server-side. Client-side hooks are triggered by commiting, merging, etc. while server-side hooks run on network operations (e.g. receiving pushed commits).
-
-hooks are stored under *.git/hooks*, which is automatically populated with some hooks when initializing git repo with *git init*. Hooks can be written with any language (ruby, python, etc.) so long as they are in properly named and executable scripts. 
-
-Enable a hook script by putting it in a file in the hooks subdirectory, naming it appropriately (no extensions!), and making it executable. After that, it will be called when ever the corresponding triggering action is performed. For a list of all major hook filenames, check the source below.
-
-**pre-commit** hooks are often part of a proper workflow to ensure that nothing is overlooked when commiting. Pre-commit hooks can check whether e.g. the code is properly formatted, the linter succeeds, and/or all test cases pass. Note that the pre-commit hook can be bypassed using *git commit --no-verify*. A nice framework for managing/maintaining pre-commit hooks is provided by pre-commit(check links). After installing the framework, create a file named *.pre-commit-config.yaml* and configure the hook as you please. An example config file for python projects:
-
-{% highlight yaml %}
+### Advanced Pre-commit Configuration
+```yaml
+# .pre-commit-config.yaml
+default_language_version:
+    python: python3.9
+default_stages: [commit, push]
 fail_fast: true
+
 repos:
+  - repo: local
+    hooks:
+      - id: custom-script
+        name: Custom Validation
+        entry: ./scripts/validate.sh
+        language: script
+        files: \\.py$
+        stages: [commit]
+        additional_dependencies: ['pytest']
+
   - repo: https://github.com/psf/black
     rev: 22.10.0
     hooks:
       - id: black
-  - repo: https://github.com/PyCQA/flake8
-    rev: 5.0.4
-    hooks:
-      - id: flake8
-        args: ["--max-line-length=89", "--ignore=E731,W503,E203"]
+        args: ['--check']
+        exclude: ^(venv/|docs/)
+
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: "v0.982"
+    rev: v0.982
     hooks:
       - id: mypy
-{% endhighlight %}
+        additional_dependencies: 
+          - 'types-requests'
+          - 'types-PyYAML'
+```
 
-and install the hook using 
+### Custom Git Hooks
+```bash
+#!/bin/bash
+# .git/hooks/pre-push
 
-{% highlight bash %}
-pre-commit install
-{% endhighlight %}
+protected_branches=('main' 'master' 'production')
+current_branch=$(git symbolic-ref HEAD | sed -e 's,.*/\(.*\),\1,')
 
-hooks are great.
+for branch in "${protected_branches[@]}"; do
+    if [[ $current_branch = $branch ]]; then
+        read -p "You're about to push to $branch, is that what you intended? [y|n] " -n 1 -r < /dev/tty
+        echo
+        if echo $REPLY | grep -E '^[Nn]$' > /dev/null; then
+            exit 1
+        fi
+    fi
+done
+exit 0
+```
 
-[pre-commit](https://pre-commit.com/)
-[source](https://git-scm.com/book/en/v2/Customizing-Git-Git-Hooks)
+## Submodules and Subtrees
+
+### Advanced Submodule Operations
+```bash
+# Update specific submodule to latest
+git submodule update --remote --merge specific-submodule
+
+# Execute command in each submodule
+git submodule foreach 'git checkout -b feature'
+
+# Remove a submodule
+git submodule deinit -f path/to/submodule
+git rm -f path/to/submodule
+rm -rf .git/modules/path/to/submodule
+```
+
+### Git Subtree (Alternative to Submodules)
+```bash
+# Add subtree
+git subtree add --prefix=lib/core https://github.com/org/lib.git master
+
+# Update subtree
+git subtree pull --prefix=lib/core https://github.com/org/lib.git master
+
+# Push changes back to subtree remote
+git subtree push --prefix=lib/core https://github.com/org/lib.git master
+```
+
+### Debugging Git Issues
+```bash
+# Debug git commands
+GIT_TRACE=1 git push origin master
+
+# Debug specific areas
+GIT_TRACE_PACKET=1  # Network operations
+GIT_TRACE_PERFORMANCE=1  # Performance data
+GIT_TRACE_SETUP=1  # Setup info
+
+# Find large files in history
+git rev-list --objects --all \
+  | git cat-file --batch-check='%(objecttype) %(objectname) %(objectsize) %(rest)' \
+  | sed -n 's/^blob //p' \
+  | sort -k2nr \
+  | head -10
+```
+
+## Useful Resources
+
+- [Git Documentation](https://git-scm.com/doc)
+- [GitHub CLI Manual](https://cli.github.com/manual/)
+- [Pre-commit Framework](https://pre-commit.com/)
+- [Conventional Commits](https://www.conventionalcommits.org/)
+- [Git Flow](https://nvie.com/posts/a-successful-git-branching-model/)
+- [Git Internal Files](https://git-scm.com/book/en/v2/Git-Internals-Plumbing-and-Porcelain)
+- [Advanced Git Configuration](https://git-scm.com/book/en/v2/Customizing-Git-Git-Configuration)
+- [Git Attributes](https://git-scm.com/docs/gitattributes)
+- [Git Plumbing Commands](https://git-scm.com/book/en/v2/Git-Internals-Plumbing-and-Porcelain)
