update to git post

--- a/_posts/2022-08-17-git-pain.md
+++ b/_posts/2022-08-17-git-pain.md
@@ -1,7 +1,7 @@
 ---
 layout: distill
-title: Git Pain Points and Solutions
-description: Solutions to tricky git situations and advanced git operations that are easy to forget
+title: git pain points and solutions
+description: solutions to tricky git situations and advanced git operations that are easy to forget
 date: 2024-03-20
 categories: code
 published: true
