--- a/_posts/2022-08-12-hpc-lab.md
+++ b/_posts/2022-08-12-hpc-lab.md
@@ -1,6 +1,6 @@
 ---
 layout: distill
-title: High Performance Computing - A Practical Guide
+title: high performance computing - a practical guide
 description: A comprehensive guide to High Performance Computing concepts, architectures, and best practices, with hands-on examples from ETH HPC Lab
 date: 2024-03-20
 categories: code
