update title git post

--- a/_posts/2022-08-17-git-pain.md
+++ b/_posts/2022-08-17-git-pain.md
@@ -1,6 +1,6 @@
 ---
 layout: distill
-title: git pain points and solutions
+title: some git stuff to remember
 description: solutions to tricky git situations and advanced git operations that are easy to forget
 date: 2024-03-20
 categories: code
